--- a/_gulp/_jade/index.jade
+++ b/_gulp/_jade/index.jade
@@ -33,7 +33,7 @@ html(lang="ru")
                 .hay__text__name apm.group
                 p
                   strong Auto Parts Market
-                  | &nbsp; - инновация в сфере продажи автозапчастей. Мы объединили сервис, комфорт, ассортимент и доступные цены в одном слове
+                  | &nbsp; - инновация в сфере продажи автозапчастей. Мы объединили сервис, комфорт, ассортимент и доступные цены в одном слове &nbsp;
                   strong apm.store
 
             //- .clear
