--- a/_gulp/_jade/_include/_head.jade
+++ b/_gulp/_jade/_include/_head.jade
@@ -36,5 +36,6 @@ head
   link(rel="stylesheet", href="./js/libs/magnific-popup/magnific-popup.css")
   link(rel="stylesheet", href="./js/libs/sumoselect/sumoselect.css")
   link(rel="stylesheet", href="./js/libs/nanoscroller/nanoscroller.css")
+  link(rel="stylesheet", href="./js/libs/air-datepicker/dist/css/datepicker.min.css")
   
   link(rel='stylesheet', href='./css/main.css')
