--- a/_gulp/_jade/ua-order-details.jade
+++ b/_gulp/_jade/ua-order-details.jade
@@ -12,160 +12,238 @@ html(lang="ru")
 
     // Preloader
     //- include ./_include/_preloader
+    
+    include ./_include/_user__navigation
+  
+    #panel
+      include ./_include/_header
 
-    include ./_include/_header
+      // Search
+      .user__search
+        .container
 
-    // Search
-    .user__search
-      .container
+            form(action="#")
+              .user__search__wrapper.table
+                div.table__cell
+                  .user__search__body
+                    input(type="text" placeholder="Введите номер детали").form-control
+                    button(type="submit")
+                      i.ion-android-search
 
-          form(action="#")
-            .user__search__wrapper.table
-              div.table__cell
-                .user__search__body
-                  input(type="text" placeholder="Введите номер детали").form-control
-                  button(type="submit")
-                    i.ion-android-search
+                  a(href="#").link-catalog.pull-left Оригинальный каталог
+                  a(href="#").link-history.pull-right История запросов
 
-                a(href="#").link-catalog.pull-left Оригинальный каталог
-                a(href="#").link-history.pull-right История запросов
+                div.table__cell
+                  a(href="#").btn.btn--xsl
+                    svg(xmlns='http://www.w3.org/2000/svg', version='1.2', viewbox='0 0 47.106934 50.000001', width='27', height='29')
+                      path(d='M26.355 28.015c-.22-.354-.525-.635-.916-.842-.39-.208-.99-.403-1.796-.598-.806-.196-1.318-.38-1.538-.55-.17-.134-.244-.305-.244-.5 0-.22.085-.39.268-.513.27-.195.66-.293 1.137-.293.463 0 .817.096 1.062.28.23.182.39.487.46.915l1.674-.074c-.025-.756-.305-1.366-.83-1.82-.525-.45-1.306-.68-2.344-.68-.634 0-1.17.096-1.623.292-.45.195-.793.476-1.025.842-.244.366-.354.757-.354 1.184 0 .658.256 1.208.757 1.66.366.317.99.597 1.88.817.696.17 1.135.293 1.33.366.28.1.49.22.6.355.108.135.17.306.17.5 0 .306-.135.575-.403.794-.27.232-.672.342-1.21.342-.512 0-.914-.122-1.207-.378-.293-.257-.5-.66-.6-1.197l-1.622.16c.11.927.44 1.623 1 2.11.562.49 1.368.72 2.406.72.72 0 1.316-.096 1.792-.304.476-.195.855-.513 1.11-.916.27-.415.392-.854.392-1.33 0-.55-.11-.99-.33-1.343zM15.05 30.347v-6.8h-1.67v8.19h5.81v-1.39h-4.14zM9.668 27.49l2.563-4.016h-1.926l-1.624 2.65-1.66-2.65H5.065L7.63 27.43l-2.82 4.308h2.002l1.83-2.856 1.832 2.856h2.014l-2.82-4.248zm0 0').path-color
+                      path(d='M31.726 20.19v14.43c0 1.586-1.294 2.88-2.88 2.88H12.5v8.655c0 1.062.867 1.916 1.93 1.916h28.83c1.062 0 1.928-.864 1.928-1.914V15.393h-12.5c-.537 0-.964-.427-.964-.964V1.93H14.43c-1.063 0-1.93.865-1.93 1.927V17.31h16.345c1.587 0 2.88 1.294 2.88 2.88z', fill='none')
+                      path(fill='none', d='M33.655 13.464h10.46L33.655 2.6M2.88 35.583h25.965c.525 0 .965-.427.965-.964V20.19c0-.524-.428-.964-.965-.964H2.88c-.524 0-.963.427-.963.964v14.43c.012.524.44.963.964.963z')
+                      path(d='M2.88 37.5h7.69v8.655c0 2.124 1.735 3.845 3.86 3.845h28.83c2.05 0 3.735-1.61 3.845-3.638V14.1c-.024-.208-.11-.416-.27-.562L34.108.293C33.922.11 33.678 0 33.41 0H14.43c-2.125 0-3.86 1.733-3.86 3.857V17.31H2.88C1.295 17.31 0 18.604 0 20.19v14.43c0 1.586 1.294 2.88 2.88 2.88zM33.656 2.6l10.46 10.864h-10.46V2.6zM12.5 3.857c0-1.062.867-1.928 1.93-1.928h17.296v12.5c0 .535.427.962.964.962h12.5v30.774c0 1.062-.866 1.916-1.928 1.916H14.43c-1.063 0-1.93-.866-1.93-1.916V37.51h16.345c1.587 0 2.88-1.293 2.88-2.88V20.19c0-1.586-1.293-2.88-2.88-2.88H12.5V3.857zM1.93 20.19c0-.524.426-.964.963-.964h25.964c.525 0 .965.427.965.964v14.43c0 .524-.427.963-.965.963H2.88c-.524 0-.963-.427-.963-.964V20.19z').path-color
 
-              div.table__cell
-                a(href="#").btn.btn--xsl
-                  svg(xmlns='http://www.w3.org/2000/svg', version='1.2', viewbox='0 0 47.106934 50.000001', width='27', height='29')
-                    path(d='M26.355 28.015c-.22-.354-.525-.635-.916-.842-.39-.208-.99-.403-1.796-.598-.806-.196-1.318-.38-1.538-.55-.17-.134-.244-.305-.244-.5 0-.22.085-.39.268-.513.27-.195.66-.293 1.137-.293.463 0 .817.096 1.062.28.23.182.39.487.46.915l1.674-.074c-.025-.756-.305-1.366-.83-1.82-.525-.45-1.306-.68-2.344-.68-.634 0-1.17.096-1.623.292-.45.195-.793.476-1.025.842-.244.366-.354.757-.354 1.184 0 .658.256 1.208.757 1.66.366.317.99.597 1.88.817.696.17 1.135.293 1.33.366.28.1.49.22.6.355.108.135.17.306.17.5 0 .306-.135.575-.403.794-.27.232-.672.342-1.21.342-.512 0-.914-.122-1.207-.378-.293-.257-.5-.66-.6-1.197l-1.622.16c.11.927.44 1.623 1 2.11.562.49 1.368.72 2.406.72.72 0 1.316-.096 1.792-.304.476-.195.855-.513 1.11-.916.27-.415.392-.854.392-1.33 0-.55-.11-.99-.33-1.343zM15.05 30.347v-6.8h-1.67v8.19h5.81v-1.39h-4.14zM9.668 27.49l2.563-4.016h-1.926l-1.624 2.65-1.66-2.65H5.065L7.63 27.43l-2.82 4.308h2.002l1.83-2.856 1.832 2.856h2.014l-2.82-4.248zm0 0').path-color
-                    path(d='M31.726 20.19v14.43c0 1.586-1.294 2.88-2.88 2.88H12.5v8.655c0 1.062.867 1.916 1.93 1.916h28.83c1.062 0 1.928-.864 1.928-1.914V15.393h-12.5c-.537 0-.964-.427-.964-.964V1.93H14.43c-1.063 0-1.93.865-1.93 1.927V17.31h16.345c1.587 0 2.88 1.294 2.88 2.88z', fill='none')
-                    path(fill='none', d='M33.655 13.464h10.46L33.655 2.6M2.88 35.583h25.965c.525 0 .965-.427.965-.964V20.19c0-.524-.428-.964-.965-.964H2.88c-.524 0-.963.427-.963.964v14.43c.012.524.44.963.964.963z')
-                    path(d='M2.88 37.5h7.69v8.655c0 2.124 1.735 3.845 3.86 3.845h28.83c2.05 0 3.735-1.61 3.845-3.638V14.1c-.024-.208-.11-.416-.27-.562L34.108.293C33.922.11 33.678 0 33.41 0H14.43c-2.125 0-3.86 1.733-3.86 3.857V17.31H2.88C1.295 17.31 0 18.604 0 20.19v14.43c0 1.586 1.294 2.88 2.88 2.88zM33.656 2.6l10.46 10.864h-10.46V2.6zM12.5 3.857c0-1.062.867-1.928 1.93-1.928h17.296v12.5c0 .535.427.962.964.962h12.5v30.774c0 1.062-.866 1.916-1.928 1.916H14.43c-1.063 0-1.93-.866-1.93-1.916V37.51h16.345c1.587 0 2.88-1.293 2.88-2.88V20.19c0-1.586-1.293-2.88-2.88-2.88H12.5V3.857zM1.93 20.19c0-.524.426-.964.963-.964h25.964c.525 0 .965.427.965.964v14.43c0 .524-.427.963-.965.963H2.88c-.524 0-.963-.427-.963-.964V20.19z').path-color
-
-    // Content
-    .content
-      .container
-
-        .row
-          .col-sm-3.col-xs-12.hidden-xs
-
-            // Profile photo
-            .profile__photo
-              img(src="./tmp/profile-photo.png", alt="").img-responsive
-
-            nav(role="navigation").navigation-level2.navigation-level2--user
-              ul
-                li: a(href="#") Личный кабинет
-                li: a(href="#") Мои Заказы
-                li: a(href="#") Мои Сообщения
-                  span.label 23
-                li: a(href="#") Состояние счета
-                li: a(href="#") Состояние заказов
-                li: a(href="#") Спец. предложения
-                li: a(href="#") Мои Документы
-                li: a(href="#") Мои Настройки
-
-          .col-sm-9.col-xs-12
-            h1
-              i.icon.icon--head
-              | Заказ&nbsp;
-              strong №56465453
-
-            table.table-basic.table-basic--data
+      // popup-about
+      #popup-about.popup.popup-about.mfp-hide
+        .popup__title VW / AUDI 044121058A
+        .popup__product.table
+          .table__cell
+            .user__product__img
+              img(src="./tmp/product.png", alt="").img-responsive
+          
+          .table__cell
+            table.table-basic.table-basic--thin
               thead
                 tr
-                  th № заказа
-                  th Номер
-                    span.hidden-xs.hidden-sm &nbsp; детали
-                  th Статус
-                  th Название/Коммен-рий
-                    span.hidden-xs.hidden-sm &nbsp; мен-ра
-                  th.hidden-xs.hidden-sm Срок, дн.
-                  th.hidden-xs.hidden-sm Кол-во
-                  th.hidden-xs.hidden-sm Цена
-                  th Сумма
+                  th(colspan="2").text--upper.text--left Главная Информация
               tbody
-                tr.tr--separator-top
+                tr.tr--separator
                   td(colspan="2") &nbsp;
                 tr
-                  td 11654534
-                  td MK016
+                  td Номер детали:
                   td
-                    .info-status.info-status--inwork В работе
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
+                    strong 044121058A
                 tr
-                  td 11654534
-                  td MK016
+                  td Имя производитель: 
                   td
-                    .info-status.info-status--cancel Отменен
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
+                    strong VW / AUDI
                 tr
-                  td 11654534
-                  td MK016
+                  td Вес: 
                   td
-                    .info-status.info-status--custom Под заказ
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
+                    strong 0,05 кг
                 tr
-                  td 11654534
-                  td MK016
+                  td Цена:	
                   td
-                    .info-status.info-status--issued Выдан
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
+                    strong 589 руб
                 tr
-                  td 11654534
-                  td MK016
+                  td Минимальный объем заказа:
                   td
-                    .info-status.info-status--inwork В работе
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
+                    strong 0
                 tr
-                  td 11654534
-                  td MK016
+                  td Срок поставки:
                   td
-                    .info-status.info-status--inwork В работе
-                  td Амортизатора компл. монтажный
-                  td.hidden-xs.hidden-sm 12
-                  td.hidden-xs.hidden-sm 20
-                  td.nowrap.hidden-xs.hidden-sm 654 руб
-                  td.nowrap 6 546 574 руб
+                    strong 10 дней
+                tr
+                  td Дата:
+                  td
+                    strong 12.10.2016
+                tr.tr--separator
+                  td(colspan="2") &nbsp;
+                tr
+                  th(colspan="2").text--upper.text--left Комментарий в прайс-листе:
+                tr.tr--separator
+                  td(colspan="2") &nbsp;
+                tr
+                  td(colspan="2") SCHLAUCH
 
-            .text-center
-              //- a(href="#").btn.btn--more
-              //-   i.ion-refresh
-              //-   | Загрузить еще 10 позиций
+      // Content
+      .content
+        .container
 
-              button(type="submit").btn.btn--more
-                i.ion-refresh
-                | Загрузить еще 10 позиций
+          a(href="#").user__menu
+            i.ion-grid
+            span Меню личного кабинета
 
-    include ./_include/_footer
-    //- div(style="height: 900px; background-color: #000")
+          .row
+            .col-sm-3.col-xs-12.hidden-xs
 
-    //[if gte IE 9]
-      <script src='./js/libs/html5shiv/es5-shim.min.js'>
-      <script src='./js/libs/html5shiv/html5shiv.min.js'>
-      <script src='./js/libs/html5shiv/html5shiv-printshiv.min.js'>
-      <script src='./js/libs/html5shiv/respond.min.js'><![endif]
+              // Profile photo
+              .profile__photo
+                img(src="./tmp/profile-photo.png", alt="").img-responsive
 
-    // Vendor.js
-       Modernizr v2.8.3
-       Plugins-scroll
-    script(src='./js/libs/vendor.js')
-    include ./_include/_footer-js
-    script(src='./js/common.js')
-    include ./_include/_js-body-bottom
+              nav(role="navigation").navigation-level2.navigation-level2--user
+                ul
+                  li.active: a(href="#") Личный кабинет
+                  li: a(href="#") Мои Заказы
+                  li: a(href="#") Мои Сообщения
+                    span.label 23
+                  li: a(href="#") Состояние счета
+                  li: a(href="#") Состояние заказов
+                  li: a(href="#") Спец. предложения
+                  li: a(href="#") Мои Документы
+                  li: a(href="#") Мои Настройки
+
+            .col-sm-9.col-xs-12
+              .content__head.content__head--arrow
+                h1 Заказ&nbsp;
+                  strong №56465453
+
+              table.table-basic.table-basic--data
+                thead
+                  tr
+                    th № заказа
+                    th.hidden-xs Номер
+                      span.hidden-xs.hidden-sm &nbsp; детали
+                    th Статус
+                    th.hidden-xxs Название/Коммен-рий
+                      span.hidden-xs.hidden-sm &nbsp; мен-ра
+                    th.hidden-xs.hidden-sm Срок, дн.
+                    th.hidden-xs.hidden-sm Кол-во
+                    th.hidden-xs.hidden-sm Цена
+                    th Сумма
+                    th.text-center.visible-xs.visible-sm Инфо
+                tbody
+                  tr.tr--separator
+                    td(colspan="2") &nbsp;
+                  tr
+                    td 11654534
+                    td.hidden-xs MK016
+                    td
+                      .info-status.info-status--inwork В работе
+                    td.hidden-xxs Амортизатора компл. монтажный
+                    td.hidden-xs.hidden-sm 12
+                    td.hidden-xs.hidden-sm 20
+                    td.nowrap.hidden-xs.hidden-sm 654 руб
+                    td.nowrap 6 546 574 руб
+                    td.text-center.visible-xs.visible-sm
+                      a(href="#popup-about").icon.icon--info.open-popup-link
+                        i.ion-ios-information
+                  tr
+                    td 11654534
+                    td.hidden-xs MK016
+                    td
+                      .info-status.info-status--cancel Отменен
+                    td.hidden-xxs Амортизатора компл. монтажный
+                    td.hidden-xs.hidden-sm 12
+                    td.hidden-xs.hidden-sm 20
+                    td.nowrap.hidden-xs.hidden-sm 654 руб
+                    td.nowrap 6 546 574 руб
+                    td.text-center.visible-xs.visible-sm
+                      a(href="#popup-about").icon.icon--info.open-popup-link
+                        i.ion-ios-information
+                  tr
+                    td 11654534
+                    td.hidden-xs MK016
+                    td
+                      .info-status.info-status--custom Под заказ
+                    td.hidden-xxs Амортизатора компл. монтажный
+                    td.hidden-xs.hidden-sm 12
+                    td.hidden-xs.hidden-sm 20
+                    td.nowrap.hidden-xs.hidden-sm 654 руб
+                    td.nowrap 6 546 574 руб
+                    td.text-center.visible-xs.visible-sm
+                      a(href="#popup-about").icon.icon--info.open-popup-link
+                        i.ion-ios-information
+                  tr
+                    td 11654534
+                    td.hidden-xs MK016
+                    td
+                      .info-status.info-status--issued Выдан
+                    td.hidden-xxs Амортизатора компл. монтажный
+                    td.hidden-xs.hidden-sm 12
+                    td.hidden-xs.hidden-sm 20
+                    td.nowrap.hidden-xs.hidden-sm 654 руб
+                    td.nowrap 6 546 574 руб
+                    td.text-center.visible-xs.visible-sm
+                      a(href="#popup-about").icon.icon--info.open-popup-link
+                        i.ion-ios-information
+                  tr
+                    td 11654534
+                    td.hidden-xs MK016
+                    td
+                      .info-status.info-status--inwork В работе
+                    td.hidden-xxs Амортизатора компл. монтажный
+                    td.hidden-xs.hidden-sm 12
+                    td.hidden-xs.hidden-sm 20
+                    td.nowrap.hidden-xs.hidden-sm 654 руб
+                    td.nowrap 6 546 574 руб
+                    td.text-center.visible-xs.visible-sm
+                      a(href="#popup-about").icon.icon--info.open-popup-link
+                        i.ion-ios-information
+                  tr
+                    td 11654534
+                    td.hidden-xs MK016
+                    td
+                      .info-status.info-status--inwork В работе
+                    td.hidden-xxs Амортизатора компл. монтажный
+                    td.hidden-xs.hidden-sm 12
+                    td.hidden-xs.hidden-sm 20
+                    td.nowrap.hidden-xs.hidden-sm 654 руб
+                    td.nowrap 6 546 574 руб
+                    td.text-center.visible-xs.visible-sm
+                      a(href="#popup-about").icon.icon--info.open-popup-link
+                        i.ion-ios-information
+
+              .text-center
+                //- a(href="#").btn.btn--more
+                //-   i.ion-refresh
+                //-   | Загрузить еще 10 позиций
+
+                button(type="submit").btn.btn--more
+                  i.ion-refresh
+                  | Загрузить еще 10 позиций
+
+      include ./_include/_footer
+      //- div(style="height: 900px; background-color: #000")
+
+      //[if gte IE 9]
+        <script src='./js/libs/html5shiv/es5-shim.min.js'>
+        <script src='./js/libs/html5shiv/html5shiv.min.js'>
+        <script src='./js/libs/html5shiv/html5shiv-printshiv.min.js'>
+        <script src='./js/libs/html5shiv/respond.min.js'><![endif]
+
+      // Vendor.js
+         Modernizr v2.8.3
+         Plugins-scroll
+      script(src='./js/libs/vendor.js')
+      include ./_include/_footer-js
+      script(src='./js/common.js')
+      include ./_include/_js-body-bottom
